--- a/vivliografiki_template2/sig-alternate-sample.tex
+++ b/vivliografiki_template2/sig-alternate-sample.tex
@@ -393,7 +393,7 @@ The Loopy Belief Propagation algorithm managed to achieve the best performance i
 \begin{figure}[h]
 	\includegraphics[scale=0.50]{hashtag}
 	\centering
-	\caption{An example of a Hashtag Graph Model. [wang 2001]}
+	\caption{An example of a Hashtag Graph Model \cite{Wang:2011:TSA:2063576.2063726} . }
 	\label{fig:hashtag}
 \end{figure}
 
