--- a/vivliografiki_template2/sig-alternate-sample.tex
+++ b/vivliografiki_template2/sig-alternate-sample.tex
@@ -402,30 +402,20 @@ Social media provides a continuously-updated stream of data which has proven use
 
 A number of different kind of techniques havde been recently proposed. \cite{mahmud2012tweet} propose a model whom objective is the prediction of users' location at different granularities. The dataset for this model is consisted of 1,524,522 tweets from 9551 users. The tools for collecting the data are the Google's geocoding API, Twitter's rest API and Twitter's streaming API. The next step is the severance of the techniques to some basic categories.
 
-\vspace{3mm}
-\textbf{Content-based Statistical Classifiers}
-\vspace{3mm}
+\subsubsection{Content-based Statistical Classifiers}
 
 In this part, three different models are trained. The first one uses all the words contained in S. The second one uses all hashtags that are included in S. The last one, uses all the place names that S contains. Originally, there is a feature selection step different at each case. For the words the algorithm keeps only the nouns. For the hashtags, the algorithm keeps only the words that start with . The place names approach keeps only the terms that appear in the tweets and match names of US cities and states from the USGS gazetteer. Next step is the identification of terms that are particularly discriminative for a location. The last step is the training and classification where using Weka they select Naïve Bayes Multimonial algorithm.
 
-\vspace{3mm}
-\textbf{Content-based Heuristics Classifiers}
+\subsubsection{Content-based Heuristics Classifiers}
 
-\begin{itemize}
-	\item Local Place Heuristic Classifier 
-\end{itemize}
+\begin{enumerate}
+	\item \textbf{Local Place Heuristic Classifier}\\
+	The heuristic is that a user would mention his or her home city or state in tweets more often than any other cities or states.
+	\item \textbf{Visit Place Heuristic Classifier}\\
+	The heuristic is that a user would visit places in his home location more often than places in other locations.
+\end{enumerate}
 
-The heuristic is that a user would mention his or her home city or state in tweets more often than any other cities or states.
-
-\begin{itemize}
-	\item Visit Place Heuristic Classifier
-\end{itemize}
-
-The heuristic is that a user would visit places in his home location more often than places in other locations.
-
-\vspace{3mm}
-\textbf{Ensemble of Location Classifiers}
-\vspace{3mm}
+\subsubsection{Ensemble of Location Classifiers}
 
 The main idea in this part is a dynamically weighted ensemble of statistical and heuristic classifiers. In this part it is introduced the Classification Strength metric. According to this, let T denote the set of terms from user’s tweets that would be considered for classification using a particular classifier. For statistical classifiers, the matching location distribution is the set of locations in our trained model containing terms from T. For the local-place classifier, this distribution contains locations from our dataset that match content in the user’s tweets. For the visit-history classifier, this distribution contains locations from the user’s visit history that appear in our dataset. The Classification Strength for a user is the inverse of the number of matching locations in the matching location distribution. In this approach, the Classification Strength of a classifier for a particular instance is used as the weight of that classifier in the ensemble (for classifying that instance) and the location with the highest rank by weighted linear combination is returned as the result.
 
@@ -435,26 +425,29 @@ For the evaluation of the classifiers, the evaluating technique is the Recall(R)
 
 The interest in creating new algorithms for geoinference prediction has shown a great increase. A lot of new algorithms that promise great results have been detected\cite{jurgens2015geolocation}. However, the conditions under the conclusions was assembled are controversial. The objective of this subsection is the assessment of the state-of-art techniques. The three evaluating criteria are the accuracy of each algorithm in real-world conditions, (2) the impact of how ground truth is determined for training, and (3) the relationship between performance and time as models infer the locations of posts created after the model was trained. Below is the description of the 9 methods: 
 
-\textbf{Backstrom, Sun, and Marlow (2010)} presented a model using Facebook. In this model this algorithm demands from the users to dispose highly-precised locations. The main idea of this method is the building of a probabilistic model representing the likelihood of observing a relationship between two users given the geographic distance between them. They achieved a complexity of O(|V|k2 ) where V is the number of vertices in the graph and k is the average number of vertex neighbors with known locations.
+\subsubsection{Techniques}
 
-\textbf{McGee, Caverlee, and Cheng (2013)} proposed a method citing the difficulties adapting from Facebook to Twitter. The technique is a tree regression model that predicts the actual distance between the users. However, as the size of the network grows, computing the regression model on all pairs of located user dominates the run-time making the algorithm infeasible in practice.
+\cite{backstrom2010find} presented a model using Facebook. In this model this algorithm demands from the users to dispose highly-precised locations. The main idea of this method is the building of a probabilistic model representing the likelihood of observing a relationship between two users given the geographic distance between them. They achieved a complexity of O(|V|k2 ) where V is the number of vertices in the graph and k is the average number of vertex neighbors with known locations.
 
-\textbf{Kong, Liu, and Huang (2014)} proposes several extensions to the Backstrom, Sun, and Marlow (2010) model based on strategies for weighting which of a user’s friends are likely to be most predictive of their location.This method uses the friendship definition of Huberman, Romero, and Wu (2009) which is that a user a is friends with b if a has mentioned b in at least two posts. Given a user, their friends are weighted according to a social tightness coefficient, which is computed as the cosine similarity of the two user’s friends.
+\cite{mcgee} proposed a method citing the difficulties adapting from Facebook to Twitter. The technique is a tree regression model that predicts the actual distance between the users. However, as the size of the network grows, computing the regression model on all pairs of located user dominates the run-time making the algorithm infeasible in practice.
 
-\textbf{Li et al. (2012)} proposes to infer geolocation by taking into account the influence of both users and of locations, capturing the intuition that some users are more informative for predicting the locations of the neighbors.The best-performing of their approaches first assigns users to random locations and then iteratively updates the locations of users from their neighbors and mentioned location names, refining the parameters in the update by measuring the prediction error of users with already-known locations.
+\cite{kungliuhuang} proposes several extensions to the Backstrom, Sun, and Marlow (2010) model based on strategies for weighting which of a user’s friends are likely to be most predictive of their location.This method uses the friendship definition of Huberman, Romero, and Wu (2009) which is that a user a is friends with b if a has mentioned b in at least two posts. Given a user, their friends are weighted according to a social tightness coefficient, which is computed as the cosine similarity of the two user’s friends.
 
-\textbf{Li, Wang, and Chang (2012)} recognize that a user may relocate over the course of their social media history and therefore may have more than one home location from which they posts. To uncover all of a user’s home locations, relationships between users and locations are modeled with a supervised extension to Latent Dirichlet Allocation (Blei, Ng, and Jordan 2003).
+\cite{liwangdeng} proposes to infer geolocation by taking into account the influence of both users and of locations, capturing the intuition that some users are more informative for predicting the locations of the neighbors.The best-performing of their approaches first assigns users to random locations and then iteratively updates the locations of users from their neighbors and mentioned location names, refining the parameters in the update by measuring the prediction error of users with already-known locations.
 
-\textbf{Rout et al. (2013)} approach geolocation inference as a classification task. a SVM classifier was trained with three core features: (1) the cities of a user’s friends, relative to the city’s respective number of Twitter users, (2) the number of closed triads in a user’s social network residing in the same city, and (3) the number of reciprocal following relationships a user has per city.
+\cite{liwangchang} recognize that a user may relocate over the course of their social media history and therefore may have more than one home location from which they posts. To uncover all of a user’s home locations, relationships between users and locations are modeled with a supervised extension to Latent Dirichlet Allocation (Blei, Ng, and Jordan 2003).
 
-\textbf{Davis Jr et al. (2011)} propose one of the simplest approaches where given a user, their location is inferred by
+\cite{rout} approach geolocation inference as a classification task. a SVM classifier was trained with three core features: (1) the cities of a user’s friends, relative to the city’s respective number of Twitter users, (2) the number of closed triads in a user’s social network residing in the same city, and (3) the number of reciprocal following relationships a user has per city.
+
+\cite{davisjrpapa} propose one of the simplest approaches where given a user, their location is inferred by
 taking the most-frequently seen location among their social network.
 
-\textbf{Jurgens (2013)} extends the idea of location inference as label propagation by interpreting location labels spatially. Locations are inferred using an iterative, multi-pass procedure. Like Kong, Liu, and Huang (2014), during one pass, the location of each user is assigned as the geometeric median of the locations of all the user’s neighbors, with groundtruth data providing the locations for the first pass.
+\cite{jurgens} extends the idea of location inference as label propagation by interpreting location labels spatially. Locations are inferred using an iterative, multi-pass procedure. Like Kong, Liu, and Huang (2014), during one pass, the location of each user is assigned as the geometeric median of the locations of all the user’s neighbors, with groundtruth data providing the locations for the first pass.
 
-\textbf{Compton, Jurgens, and Allen (2014)} extend the method of Jurgens (2013) to take into account edge weights in the social network and to limit the propagation of noisy locations.
+\cite{compton} extend the method of Jurgens (2013) to take into account edge weights in the social network and to limit the propagation of noisy locations.
 
-\textbf{Evaluation Phase}\\
+\subsubsection{Evaluation Phase}
+
 The evaluation criteria by which methods should be measured are three: (1) accurate inference of a post’s location, (2) accurate inference of all the posts generated by a user, and (3) maximizing the number of posts whose location is able to be inferred. The metrics that are used for the evaluation of the techniques are three, too. Specifically, AUC, Post Coverage and Median-Max.
 
 The first(cross-validation) experiment is an evaluation of all nine methods and the baseline in a common setting, on identical data, using consistent sources of ground truth, and measuring performance with the proposed evaluation metrics. 
